--- a/ticket/src/main/resources/templates/tickets/index.html
+++ b/ticket/src/main/resources/templates/tickets/index.html
@@ -25,6 +25,9 @@
     <li class="nav-item"><a class="nav-link" href="/tickets/delete">Delete ticket</a></li>
     <li class="nav-item"><a class="nav-link" href="/tickets/priority">Sort Priority </a></li>
     <li class="nav-item"><a class="nav-link" href="/tickets/id">Sort id</a></li>
+    <form th:action="@{/logout}" method="post">
+      <input type="submit" value="Logout" />
+    </form>
 
 <!--    <div class="form-group">-->
 <!--      <select name="sortTicketsByPriority" id="sortTicketsByPriority" class="form-control">-->
